<resources>
    <string name="app_name">Pendaftaran</string>
    <string name="namadpn">Nama depan</string>
    <string name="namabklng">Nama Belakang</string>
    <string name="TmpLahir">Tempat Lahir</string>
    <string name="TglLahir">Tanggal Lahir</string>
    <string name="Alamat">Alamat</string>
    <string name="JK">Jenis Kelamin</string>
    <string name="Laki_laki">Laki-laki</string>
    <string name="Perempuan">Perempuan</string>
    <string name="Agama">Agama</string>
    <string name="Islam">Islam</string>
    <string name="Katolik">Katolik</string>
    <string name="Buddha">Buddha</string>
    <string name="AlirnKercayaan">Aliran kepercayaan</string>
    <string name="Kristen">Kristen</string>
    <string name="Hindu">Hindu</string>
    <string name="Konghucu">Konghucu</string>
    <string name="email">Email</string>
    <string name="tlpn">Telepon</string>
    <string name="Password">Password</string>
    <string name="UlangiPass">Masukan Password Kembali</string>
    <string name="Kembali">KEMBALI</string>
    <string name="Daftar">DAFTAR</string>
    <string name="invalid_namaDpn">Nama depan harus Diisi</string>
    <string name="invalid_namaBlkg">Nama Belakang Harus Diisi</string>
    <string name="invalid_TmpatLahir">Tempat lahir Harus Diisi</string>
    <string name="invalid_TglLahir">Tanggal Lahir Harus Diisi</string>
    <string name="invalid_email">Email Harus Disi</string>
    <string name="invalid_password">Password Harus Diisi</string>
    <string name="invalid_Telepon">Nomor Telepon Harus Diisi</string>

</resources>
