<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity"
android:background="@color/BG">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BGLinear"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="PENDAFTARAN"
            android:textAlignment="center"
            android:textColor="@color/judul"
            android:textSize="35dp"
            android:textStyle="italic|bold" />
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/NamaDpn_TextInputLayout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_namadpn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/namadpn"
                    android:inputType="textPersonName"
                    android:ems="7" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/NamaBlkng_TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_namaBlkng"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/namabklng"
                    android:inputType="textPersonName"
                    android:ems="10"/>
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TmpLhr_TextInputLayout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_TmpLahir"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/TmpLahir"
                    android:inputType="textPersonName"
                    android:ems="7" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TglLhr_TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_TglLahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/TglLahir"
                    android:inputType="textPersonName"
                    android:ems="10"/>
            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Almt_TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_Almt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Alamat"
                android:inputType="textPersonName"
                android:ems="10"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/JK"
            android:layout_marginTop="10dp"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <RadioButton
                android:id="@+id/et_Laki_laki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Laki_laki" />
            <RadioButton
                android:id="@+id/et_Perempuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Perempuan"
                android:layout_marginLeft="100dp"/>

        </TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Agama"/>
        <TableLayout
            android:id="@+id/Agama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/Islam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Islam"/>
                <RadioButton
                    android:id="@+id/Kristen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Kristen"
                    android:layout_marginLeft="100dp"/>

            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <RadioButton
                    android:id="@+id/Katolik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Katolik" />
                <RadioButton
                    android:id="@+id/Hindu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Hindu"
                    android:layout_marginLeft="100dp"/>
            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <RadioButton
                    android:id="@+id/Buddha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Buddha" />
                <RadioButton
                    android:id="@+id/Konghucu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Konghucu"
                    android:layout_marginLeft="100dp"/>
            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <RadioButton
                    android:id="@+id/AliranKepercayaan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AlirnKercayaan"/>
            </TableRow>
        </TableLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Telepon_TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_Telepon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tlpn"
                android:inputType="text|phone"
                android:ems="10"
                android:layout_marginTop="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Email_TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_marginTop="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Pass_TextInputLayout"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_marginTop="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/UlangiPass_TextInputLayout"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_UlangiPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/UlangiPass"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_marginTop="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:layout_gravity="center|bottom"
            android:orientation="vertical">

            <TableRow
                android:layout_height="100dp"
                android:layout_width="match_parent">
                <Button
                    android:id="@+id/et_Kembali"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/Kembali"
                    android:background="@drawable/btn_rounded"/>
                <Button
                    android:id="@+id/et_Daftar"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="53dp"
                    android:text="@string/Daftar"
                    android:background="@drawable/btn_rounded" />

            </TableRow>

        </LinearLayout>
    </LinearLayout>

</ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>